@@ -1,8 +1,10 @@
 cowdancer (0.37) UNRELEASED; urgency=low
 
-  * 
+  * Trying to fix: "tar segfaulting within cowbuilder chroot", thanks to Michael
+    Ablassmeier (closes: #430636).
+  - work around glibc bug on dlvsym/dlerror failure case.
 
- -- Junichi Uekawa <dancer@debian.org>  Tue, 26 Jun 2007 07:42:26 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Wed, 27 Jun 2007 07:06:56 +0900
 
 cowdancer (0.36) unstable; urgency=low
 
