@@ -1,3 +1,9 @@
+2007-06-27  Junichi Uekawa  <dancer@debian.org>
+
+	* cowdancer.c (load_ilist): close fd used for mmap after use.
+	(initialize_functions): work around glibc bug: dlvsym failure
+	isn't setting dlerror.
+
 2007-06-21  Junichi Uekawa  <dancer@debian.org>
 
 	* cowdancer.c (initialize_functions): try to load chown@@GLIBC_2.1
